@@ -46,7 +46,7 @@ static bool dot_part_of_word(voikko_options_t * voikkoOptions, const wchar_t * t
 	}
 	
 	// abbreviations
-	if (voikko_do_spell(voikkoOptions, text, len) != SPELL_FAILED) return true;
+	if (voikko_do_spell(voikkoOptions, text, len) != spellchecker::SPELL_FAILED) return true;
 	return false;
 }
 
