@@ -2,6 +2,8 @@
 
 	* Most of the global variables have now been eliminated
 	  from Malaga implementation.
+	* Add interface Speller and implement it in
+	  AnalyzerToSpellerAdapter.
 
 2009-11-01 Harri Pitkänen <hatapitk@iki.fi>
 
